Camada de repository + versionamento de rota
